# naive-ffa-scalar-mult

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  test_em.rs  utils.rs
